--- a/index.html
+++ b/index.html
@@ -2,30 +2,60 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>DevLab</title>
+    <!--BOOTSTRAP CSS-->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+      crossorigin="anonymous"
+    />
+    <!--our custom CSS-->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="body">
-    <div class="login-box">
-      <h1>Login</h1>
-      <div class="textbox">
-        <i class="fas fa-user"></i> <input type="text" placeholder="Username" />
-      </div>
+    <div class="container">
+      <div class="login-box">
+        <h1>Login</h1>
+        <div class="textbox">
+          <i class="fas fa-user"></i>
+          <input type="text" placeholder="Username" />
+        </div>
 
-      <div class="textbox">
-        <i class="fas fa-lock"></i>
-        <input type="password" placeholder="Password" />
-      </div>
+        <div class="textbox">
+          <i class="fas fa-lock"></i>
+          <input type="password" placeholder="Password" />
+        </div>
 
-      <input type="button" class="btn" value="Sign in" />
+        <input type="button" class="btn" value="Sign in" />
+      </div>
     </div>
-    <div class="intro">
-      <h1>WELCOME TO DEVLAB</h1>
-      <h4>UNDER DEVELOPMENT...</h4>
+    <div class="container">
+      <div class="intro">
+        <h1>WELCOME TO DEVLABY</h1>
+        <h4>UNDER DEVELOPMENT..</h4>
+      </div>
     </div>
-    </div>
-  </div>
+
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
